syntax = "proto3";

package yandex.cloud.logging.v1;

import "google/api/annotations.proto";
import "google/protobuf/field_mask.proto";
import "yandex/cloud/access/access.proto";
import "yandex/cloud/api/operation.proto";
import "yandex/cloud/logging/v1/sink.proto";
import "yandex/cloud/operation/operation.proto";
import "yandex/cloud/validation.proto";

option go_package = "github.com/yandex-cloud/go-genproto/yandex/cloud/logging/v1;logging";
option java_package = "yandex.cloud.api.logging.v1";

// A set of methods for managing log sinks.
service SinkService {
  // Returns the specified sink.
  //
  // To get the list of all available sinks, make a [List] request.
  rpc Get(GetSinkRequest) returns (Sink) {
    option (google.api.http) = {get: "/logging/v1/sinks/{sink_id}"};
  }

  // Retrieves the list of sinks in the specified folder.
  rpc List(ListSinksRequest) returns (ListSinksResponse) {
    option (google.api.http) = {get: "/logging/v1/sinks"};
  }

  // Creates a sink in the specified folder.
  rpc Create(CreateSinkRequest) returns (operation.Operation) {
    option (google.api.http) = {
      post: "/logging/v1/sinks"
      body: "*"
    };
    option (yandex.cloud.api.operation) = {
      metadata: "CreateSinkMetadata"
      response: "Sink"
    };
  }

  // Updates the specified sink.
  rpc Update(UpdateSinkRequest) returns (operation.Operation) {
    option (google.api.http) = {
      patch: "/logging/v1/sinks/{sink_id}"
      body: "*"
    };
    option (yandex.cloud.api.operation) = {
      metadata: "UpdateSinkMetadata"
      response: "Sink"
    };
  }

  // Deletes the specified sink.
  rpc Delete(DeleteSinkRequest) returns (operation.Operation) {
    option (google.api.http) = {delete: "/logging/v1/sinks/{sink_id}"};
    option (yandex.cloud.api.operation) = {
      metadata: "DeleteSinkMetadata"
      response: "google.protobuf.Empty"
    };
  }

  // Lists operations for the specified sink.
  rpc ListOperations(ListSinkOperationsRequest) returns (ListSinkOperationsResponse) {
    option (google.api.http) = {get: "/logging/v1/sinks/{sink_id}/operations"};
  }

  // Lists existing access bindings for the specified sink.
  rpc ListAccessBindings(access.ListAccessBindingsRequest) returns (access.ListAccessBindingsResponse) {
    option (google.api.http) = {get: "/logging/v1/sinks/{resource_id}:listAccessBindings"};
  }

  // Sets access bindings for the specified sink.
  rpc SetAccessBindings(access.SetAccessBindingsRequest) returns (operation.Operation) {
    option (google.api.http) = {
      post: "/logging/v1/sinks/{resource_id}:setAccessBindings"
      body: "*"
    };
    option (yandex.cloud.api.operation) = {
      metadata: "access.SetAccessBindingsMetadata"
      response: "google.protobuf.Empty"
    };
  }

  // Updates access bindings for the specified sink.
  rpc UpdateAccessBindings(access.UpdateAccessBindingsRequest) returns (operation.Operation) {
    option (google.api.http) = {
      patch: "/logging/v1/sinks/{resource_id}:updateAccessBindings"
      body: "*"
    };
    option (yandex.cloud.api.operation) = {
      metadata: "access.UpdateAccessBindingsMetadata"
      response: "google.protobuf.Empty"
    };
  }
}

message GetSinkRequest {
  // ID of the sink to return.
  //
  // To get a sink ID make a [SinkService.List] request.
  string sink_id = 1 [
    (required) = true,
    (length) = "<=64"
  ];
}

message ListSinksRequest {
  reserved 2;
  // Folder ID of the sinks to return.
  //
  // To get a folder ID make a [yandex.cloud.resourcemanager.v1.FolderService.List] request.
  string folder_id = 1 [
    (required) = true,
    (length) = "<=64"
  ];

  // The maximum number of results per page to return. If the number of available
  // results is larger than `page_size`, the service returns a [ListSinkssResponse.next_page_token]
  // that can be used to get the next page of results in subsequent list requests.
  //
  // Default value: 100.
  int64 page_size = 3;

  // Page token. To get the next page of results, set `page_token` to the
  // [ListSinksResponse.next_page_token] returned by a previous list request.
  string page_token = 4 [(length) = "<=100"];

  // A filter expression that filters sinks listed in the response.
  //
  // The expression must specify:
  // 1. The field name. Currently filtering can only be applied to the [Sink.name] field.
  // 2. An `=` operator.
  // 3. The value in double quotes (`"`). Must be 3-63 characters long and match the regular expression `[a-z][-a-z0-9]{1,61}[a-z0-9]`.
  // Example of a filter: `name="my-sink"`.
  string filter = 5 [(length) = "<=1000"];
}

message ListSinksResponse {
  // List of sinks in the specified folder.
  repeated Sink sinks = 1;

  // Token for getting the next page of the list. If the number of results is greater than
  // the specified [ListSinksRequest.page_size], use `next_page_token` as the value
  // for the [ListSinksRequest.page_token] parameter in the next list request.
  //
  // Each subsequent page will have its own `next_page_token` to continue paging through the results.
  string next_page_token = 2;
}

message CreateSinkRequest {
  // ID of the folder to create a sink in.
  //
  // To get a folder ID make a [yandex.cloud.resourcemanager.v1.FolderService.List] request.
  string folder_id = 1 [
    (required) = true,
    (length) = "<=64"
  ];

  // Name of the sink.
  // The name must be unique within the folder.
  string name = 2 [(pattern) = "|[a-z][-a-z0-9]{1,61}[a-z0-9]"];

  // Description of the sink.
  string description = 3 [(length) = "<=256"];

  // Sink labels as `key:value` pairs.
  map<string, string> labels = 4 [
    (size) = "<=64",
    (length) = "<=63",
    (pattern) = "[-_0-9a-z]*",
    (map_key).length = "1-63",
    (map_key).pattern = "[a-z][-_0-9a-z]*"
  ];

  // Logs will be written to the sink on behalf of this service account
  string service_account_id = 5 [(length) = "<=64"];

  // Logs destination
  oneof sink {
    option (exactly_one) = true;
    // Yandex data stream
    Sink.Yds yds = 6;
    // Object storage
    Sink.S3 s3 = 7;
  }
}

message CreateSinkMetadata {
  // ID of the sink being created.
  string sink_id = 1;
}

message UpdateSinkRequest {
  // ID of the sink to update.
  //
  // To get a sink ID make a [SinkService.List] request.
  string sink_id = 1 [
    (required) = true,
    (length) = "<=64"
  ];

  // Field mask that specifies which attributes of the function should be updated.
  google.protobuf.FieldMask update_mask = 2;

  // New name of the sink.
  // The name must be unique within the folder.
  string name = 3 [(pattern) = "|[a-z][-a-z0-9]{1,61}[a-z0-9]"];

  // New Description of the sink.
  string description = 4 [(length) = "<=256"];

  // New sink labels as `key:value` pairs.
  map<string, string> labels = 5 [
    (size) = "<=64",
    (length) = "<=63",
    (pattern) = "[-_0-9a-z]*",
    (map_key).length = "1-63",
    (map_key).pattern = "[a-z][-_0-9a-z]*"
  ];

  // new service account to use for logs writing to the sink.
  string service_account_id = 6 [(length) = "<=64"];

  // New logs destination
  oneof sink {
    option (exactly_one) = true;
    // Yandex data stream
    Sink.Yds yds = 7;
    // Object storage
    Sink.S3 s3 = 8;
  }
}

message UpdateSinkMetadata {
  // ID of the sink being updated.
  string sink_id = 1;
}

message DeleteSinkRequest {
  // ID of the sink to delete.
  //
  // To get a sink ID make a [SinkService.List] request.
  string sink_id = 1 [
    (required) = true,
    (length) = "<=64"
  ];
}

message DeleteSinkMetadata {
  // ID of the sink being deleted.
  string sink_id = 1;
}

message ListSinkOperationsRequest {
  // ID of the sink to list operations for.
  //
  // To get a sink ID make a [SinkService.List] request.
  string sink_id = 1 [
    (required) = true,
    (length) = "<=64"
  ];

  // The maximum number of results per page to return. If the number of available
  // results is larger than `page_size`, the service returns a [ListSinkOperationsResponse.next_page_token]
  // that can be used to get the next page of results in subsequent list requests.
  //
  // Default value: 100.
  int64 page_size = 2 [(value) = "0-1000"];

  // Page token. To get the next page of results, set `page_token` to the
  // [ListSinkOperationsResponse.next_page_token] returned by a previous list request.
  string page_token = 3 [(length) = "<=100"];
  // A filter expression that filters resources listed in the response.
  //
  // The expression must specify:
  // 1. The field name. Currently filtering can be applied to the [operation.Operation.description], [operation.Operation.created_at], [operation.Operation.modified_at], [operation.Operation.created_by], [operation.Operation.done] fields.
  // 2. An `=` operator.
  // 3. The value in double quotes (`"`). Must be 3-63 characters long and match the regular expression `[a-z][-a-z0-9]{1,61}[a-z0-9]`.
  // Examples of a filter: `done=false`, `created_by='John.Doe'`.
  string filter = 4 [(length) = "<=1000"];
}

message ListSinkOperationsResponse {
  // List of operations for the specified sink.
  repeated operation.Operation operations = 1;

  // Token for getting the next page of the list. If the number of results is greater than
  // the specified [ListOSinkperationsRequest.page_size], use `next_page_token` as the value
  // for the [ListSinkOperationsRequest.page_token] parameter in the next list request.
  //
  // Each subsequent page will have its own `next_page_token` to continue paging through the results.
  string next_page_token = 2;
}
